--- a/project-management-app/src/app/boards/components/boards-list/boards-list.component.html
+++ b/project-management-app/src/app/boards/components/boards-list/boards-list.component.html
@@ -1,5 +1,5 @@
 <mat-card class="title-container">
-  <mat-card-title class="title-container__inner title-container__inner__heading"
+  <mat-card-title class="title-container__inner title-container__inner__heading" i18n
     >Boards List</mat-card-title
   >
 </mat-card>
@@ -12,7 +12,7 @@
     >
     </app-board-preview>
     <div *ngIf="!boardsList?.length">
-      <mat-card>You have no boards yet</mat-card>
+      <mat-card i18n>You have no boards yet</mat-card>
     </div>
   </div>
 </div>
