--- a/project-management-app/src/app/boards/components/create-board-button/create-board-button.component.html
+++ b/project-management-app/src/app/boards/components/create-board-button/create-board-button.component.html
@@ -1,7 +1,7 @@
 <button
   mat-stroked-button
   color="accent"
-  aria-label="icon button with a create_new_folder icon"
+  aria-label="icon button with icon"
   [class]="'button'"
   routerLink="/boards"
   routerLinkActive="active"
@@ -12,6 +12,5 @@
 >
   <mat-icon aria-hidden="false" aria-label="create_new_folder icon" fontIcon="create_new_folder"
     >create_new_folder</mat-icon
-  >
-  Create Board
+  ><ng-container i18n> Create Board</ng-container>
 </button>
