--- a/project-management-app/src/app/core/components/all-boards-button/all-boards-button.component.html
+++ b/project-management-app/src/app/core/components/all-boards-button/all-boards-button.component.html
@@ -7,5 +7,5 @@
   routerLinkActive="active"
   ariaCurrentWhenActive="page"
 >
-  <mat-icon aria-hidden="false" aria-label="apps icon" fontIcon="apps">apps</mat-icon> Boards
-</button>
+  <mat-icon aria-hidden="false" aria-label="apps icon" fontIcon="apps">apps</mat-icon>
+  <ng-container i18n>Boards</ng-container></button>
