--- a/project-management-app/src/app/core/pages/not-found-page/not-found-page.component.html
+++ b/project-management-app/src/app/core/pages/not-found-page/not-found-page.component.html
@@ -1,5 +1,5 @@
 <div class="container page404">
-  <h2 class="page404__message">Looks like you are lost...</h2>
+  <h2 class="page404__message" i18n>Looks like you are lost...</h2>
   <div class="page404__controls">
     <button
       mat-raised-button
@@ -7,6 +7,7 @@
       routerLink="/pm-app"
       routerLinkActive="active"
       ariaCurrentWhenActive="page"
+      i18n
     >
       To main page
     </button>
@@ -16,6 +17,7 @@
       routerLink="/boards"
       routerLinkActive="active"
       ariaCurrentWhenActive="page"
+      i18n
     >
       To boards page
     </button>
