--- a/project-management-app/src/app/shared/components/tasks-search/tasks-search.component.html
+++ b/project-management-app/src/app/shared/components/tasks-search/tasks-search.component.html
@@ -10,6 +10,7 @@
       id="tasksInput"
       id="search-box tasks"
       placeholder="Begin type to search task..."
+      i18n-placeholder
       (input)="search(searchBox.value)"
     />
     <mat-icon matPrefix>search</mat-icon>
