--- a/project-management-app/src/app/users/components/users-search/users-search.component.html
+++ b/project-management-app/src/app/users/components/users-search/users-search.component.html
@@ -1,4 +1,4 @@
-<div>Users:</div>
+<div i18n>Users:</div>
 <mat-form-field
   class="example-chip-list"
   appearance="fill"
@@ -29,6 +29,7 @@
       type="search"
       id="search-box users"
       placeholder="Begin type to search user..."
+      i18n-placeholder
       [matChipInputFor]="chipList"
       [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
       [matChipInputAddOnBlur]="addOnBlur"
