--- a/project-management-app/src/app/auth/components/signup-form/signup-form.component.html
+++ b/project-management-app/src/app/auth/components/signup-form/signup-form.component.html
@@ -1,5 +1,5 @@
 <div class="container__users-form">
-  <h2>Sign Up</h2>
+  <h2 i18n>Sign Up</h2>
   <form
     (ngSubmit)="onSubmit(ngForm)"
     #ngForm="ngForm"
@@ -8,12 +8,13 @@
   >
     <div>
       <mat-form-field>
-        <mat-label for="name">Username: </mat-label>
+        <mat-label for="name" i18n>Username: </mat-label>
         <input
           matInput
           id="name"
           type="text"
           placeholder="name"
+          i18n-placeholder
           name="name"
           formControlName="name"
           (blur)="getNameErrorMessage()"
@@ -22,12 +23,13 @@
     </div>
     <div>
       <mat-form-field>
-        <mat-label for="login">Login: </mat-label>
+        <mat-label for="login" i18n>Login: </mat-label>
         <input
           matInput
           id="login"
           type="text"
           placeholder="login"
+          i18n-placeholder
           name="login"
           formControlName="login"
           (blur)="getLoginErrorMessage()"
@@ -36,13 +38,14 @@
     </div>
     <div class="inputForm">
       <mat-form-field>
-        <mat-label for="password">Password: </mat-label>
+        <mat-label for="password" i18n>Password: </mat-label>
         <input
           matInput
           id="password"
           type="password"
           name="password"
           placeholder="password"
+          i18n-placeholder
           formControlName="password"
           (blur)="getPasswordErrorMessage()"
         />
@@ -62,11 +65,12 @@
     <button
       mat-stroked-button
       color="primary"
-      aria-label="icon button with a create_new_folder icon"
+      aria-label="icon button with icon"
       [class]="'button'"
       ariaCurrentWhenActive="page"
       type="submit"
       [disabled]="!signupForm.valid"
+      i18n
     >
       SignUp
     </button>
