--- a/project-management-app/src/app/boards/components/create-board-dialog/create-board-dialog.component.html
+++ b/project-management-app/src/app/boards/components/create-board-dialog/create-board-dialog.component.html
@@ -1,22 +1,32 @@
 <h2 mat-dialog-title>{{ configDialog.title }}</h2>
 
 <form (ngSubmit)="onSubmit(ngForm)" #ngForm="ngForm" [formGroup]="createBoardForm">
-  <div class="owner" *ngIf="user$ | async as user">Board Owner: {{ user.name }}</div>
+  <div class="owner" *ngIf="user$ | async as user">
+    <ng-container i18n>Board Owner:</ng-container> {{ user.name }}
+  </div>
   <h5 class="description">{{ configDialog.description }}</h5>
   <mat-dialog-content class="mat-typography modalContent">
     <div>
       <mat-form-field class="form-field" appearance="fill">
-        <mat-label for="title">Board Title</mat-label>
+        <mat-label for="title" i18n>Board Title</mat-label>
         <input
           matInput
           id="title"
           type="text"
           placeholder="title"
+          i18n-placeholder
           name="title"
           formControlName="title"
           (blur)="getTitleErrorMessage()"
         />
-        <button *ngIf="title" matSuffix mat-icon-button aria-label="Clear" (click)="title = ''">
+        <button
+          *ngIf="title"
+          matSuffix
+          mat-icon-button
+          type="button"
+          aria-label="Clear"
+          (click)="createBoardForm.patchValue({ title: '' })"
+        >
           <mat-icon>close</mat-icon>
         </button>
       </mat-form-field>
@@ -28,6 +38,7 @@
         type="text"
         name="users"
         placeholder="users"
+        i18n-placeholder
         controlName="users"
         selectedUsers="selectedUsers"
         [parentGroup]="createBoardForm"
@@ -41,11 +52,11 @@
     </div>
   </div>
   <mat-dialog-actions align="end">
-    <button mat-button mat-dialog-close (click)="closeModal()">Cancel</button>
+    <button type="button" mat-button mat-dialog-close (click)="closeModal()" i18n>Cancel</button>
     <button
       mat-stroked-button
       color="primary"
-      aria-label="icon button with a create_new_folder icon"
+      aria-label="icon button with icon"
       [class]="'button'"
       ariaCurrentWhenActive="page"
       type="submit"
