--- a/project-management-app/src/app/pm-app/pages/welcome-page/welcome-page.component.html
+++ b/project-management-app/src/app/pm-app/pages/welcome-page/welcome-page.component.html
@@ -1,14 +1,14 @@
 <div class="container_wide">
   <section class="left">
     <div class="quote">
-      <h3 class="quote__text">
+      <h3 class="quote__text" i18n>
         Everything you do should be done well, even if you commit madness.
       </h3>
-      <span>Honore de Balzac</span>
+      <span i18n>Honore de Balzac</span>
     </div>
 
     <div class="quote__down">
-      <h3>
+      <h3 i18n>
         Do it well<br />
         with our Kanban board!
       </h3>
@@ -19,7 +19,7 @@
       <div class="top">
         <div class="sticker sticker_1">
           <div class="sticker__inner">
-            <h3 class="sticker__text">
+            <h3 class="sticker__text" i18n>
               Just simple <br />
               Kanban Board
             </h3>
@@ -27,10 +27,11 @@
         </div>
         <div class="sticker sticker_2">
           <div class="sticker__inner">
-            <h3>Why to use<br />Kanban board?</h3>
+            <h3 i18n>Why to use<br />Kanban board?</h3>
             <a class="sticker__text-link" href="https://www.atlassian.com/agile/kanban/boards"
-              ><h3>Ask our competitors</h3></a
+              ><h3 i18n>Ask our competitors...</h3></a
             >
+            <h3 i18n>...and return <br />to our simple board!</h3>
           </div>
         </div>
       </div>
@@ -39,16 +40,20 @@
           <div class="sticker__inner">
             <ul class="right__list">
               <li class="right__list-item">
-                <mat-icon color="primary">done_outline</mat-icon>Create boards
+                <mat-icon color="primary">done_outline</mat-icon>
+                <ng-container i18n>Create boards</ng-container>
               </li>
               <li class="right__list-item">
-                <mat-icon color="primary">done_outline</mat-icon>Rearrange tasks / columns
+                <mat-icon color="primary">done_outline</mat-icon>
+                <ng-container i18n>Rearrange tasks / columns</ng-container>
               </li>
               <li class="right__list-item">
-                <mat-icon color="primary">done_outline</mat-icon>Search tasks
+                <mat-icon color="primary">done_outline</mat-icon>
+                <ng-container i18n>Search tasks</ng-container>
               </li>
               <li class="right__list-item">
-                <mat-icon color="primary">done_outline</mat-icon>Select users
+                <mat-icon color="primary">done_outline</mat-icon>
+                <ng-container i18n>Select users</ng-container>
               </li>
             </ul>
           </div>
@@ -58,10 +63,11 @@
     <div class="right_2">
       <div class="sticker sticker_4">
         <div class="sticker__inner">
-          <h3 class="sticker__text">Created with</h3>
+          <h3 class="sticker__text" i18n>Created with</h3>
           <div class="sticker__imgContainer">
             <div class="logosRow">
-              <img src="../../../../assets/heart.png" alt="heart" height="30px" /> and
+              <img src="../../../../assets/heart.png" alt="heart" height="30px" />
+              <ng-container i18n>and</ng-container>
             </div>
             <div class="logosRow">
               <img
@@ -83,13 +89,13 @@
             </div>
           </div>
 
-          <h3 class="sticker__text">during the</h3>
+          <h3 class="sticker__text" i18n>during the</h3>
           <div>
             <a
               class="sticker__course"
               href="https://github.com/rolling-scopes-school/js-fe-course-en/tree/main/UpSkillMe"
               ><img src="../../../../assets/epam-logo.png" alt="epam logo" height="30px" />
-              UpSkillMe course</a
+              <ng-container i18n>UpSkillMe course</ng-container></a
             >
           </div>
         </div>
