--- a/project-management-app/src/app/tasks/components/create-column-button/create-column-button.component.html
+++ b/project-management-app/src/app/tasks/components/create-column-button/create-column-button.component.html
@@ -7,5 +7,5 @@
   color="primary"
 >
   <mat-icon>add_circle</mat-icon>
-  Create Column
+  <ng-container i18n>Create Column</ng-container>
 </button>
