--- a/project-management-app/src/app/tasks/components/create-column-dialog/create-column-dialog.component.html
+++ b/project-management-app/src/app/tasks/components/create-column-dialog/create-column-dialog.component.html
@@ -1,22 +1,29 @@
 <h2 mat-dialog-title>{{ configDialog.title }}</h2>
 
 <form (ngSubmit)="onSubmit(ngForm)" #ngForm="ngForm" [formGroup]="createColumnForm">
-  <!-- <div class="owner" *ngIf="board$ | async as board">Board Title: {{ board.title }}</div> -->
   <h5 class="description">{{ configDialog.description }}</h5>
   <mat-dialog-content class="mat-typography modalContent">
     <div>
       <mat-form-field class="form-field" appearance="fill">
-        <mat-label for="title">Column Title</mat-label>
+        <mat-label for="title" i18n>Column Title</mat-label>
         <input
           matInput
           id="title"
           type="text"
           placeholder="title"
+          i18n-placeholder
           name="title"
           formControlName="title"
           (blur)="getTitleErrorMessage()"
         />
-        <button *ngIf="title" matSuffix mat-icon-button aria-label="Clear" (click)="title = ''">
+        <button
+          *ngIf="title"
+          type="button"
+          matSuffix
+          mat-icon-button
+          aria-label="Clear"
+          (click)="createColumnForm.patchValue({ title: '' })"
+        >
           <mat-icon>close</mat-icon>
         </button>
       </mat-form-field>
@@ -28,11 +35,11 @@
     </div>
   </div>
   <mat-dialog-actions align="end">
-    <button mat-button mat-dialog-close (click)="closeModal()">Cancel</button>
+    <button type="button" mat-button mat-dialog-close (click)="closeModal()" i18n>Cancel</button>
     <button
       mat-stroked-button
       color="primary"
-      aria-label="icon button with a create_new_folder icon"
+      aria-label="icon button with icon"
       [class]="'button'"
       ariaCurrentWhenActive="page"
       type="submit"
