--- a/project-management-app/src/app/tasks/components/create-task-button/create-task-button.component.html
+++ b/project-management-app/src/app/tasks/components/create-task-button/create-task-button.component.html
@@ -6,5 +6,5 @@
   type="button"
   (click)="openDialog()"
 >
-  <mat-icon>add_circle</mat-icon> Create Task
+  <mat-icon>add_circle</mat-icon><ng-container i18n>Create Task</ng-container>
 </button>
