--- a/project-management-app/src/app/auth/components/logout/logout.component.html
+++ b/project-management-app/src/app/auth/components/logout/logout.component.html
@@ -1,1 +1,1 @@
-<button mat-stroked-button color="accent" (click)="logout()" i18n>Logout</button>
+<button mat-flat-button color="accent" (click)="logout()" i18n>Logout</button>
