--- a/project-management-app/src/app/auth/components/signup-form/signup-form.component.html
+++ b/project-management-app/src/app/auth/components/signup-form/signup-form.component.html
@@ -63,7 +63,7 @@
       </div>
     </div>
     <button
-      mat-stroked-button
+      mat-flat-button
       color="primary"
       aria-label="icon button with icon"
       [class]="'button'"
