--- a/project-management-app/src/app/boards/components/board-preview/board-preview.component.html
+++ b/project-management-app/src/app/boards/components/board-preview/board-preview.component.html
@@ -1,11 +1,8 @@
 <mat-card class="card-container" *ngIf="board" [routerLink]="['/boards', board._id]">
   <div class="card-container__inner">
-    <mat-card-title
-      class="card-container__inner__heading"
-      *ngIf="!formVisible"
-      (click)="update($event)"
-      >{{ board.title }}</mat-card-title
-    >
+    <mat-card-title class="card-container__inner__heading" *ngIf="!formVisible">{{
+      board.title
+    }}</mat-card-title>
 
     <form
       (click)="onClick($event)"
@@ -40,17 +37,19 @@
     *ngIf="board"
     [routerLink]="['/boards', board._id]"
   >
-    <mat-chip-list aria-label="Owner">
-      <ng-container i18n>Owner:</ng-container>
-      <mat-chip
-        matTooltip="{{ board.owner | usernameById | async }}"
-        [matTooltipShowDelay]="500"
-        matTooltipPosition="above"
-        class="item__chips"
-        >{{ board.owner | usernameById | async | slice: 0:1 | uppercase }}</mat-chip
-      >
+    <mat-chip-list aria-label="Owner" class="full_width">
+      <div class="hidden-overflow">
+        <ng-container i18n>Owner:</ng-container>
+        <mat-chip
+          matTooltip="{{ board.owner | usernameById | async }}"
+          [matTooltipShowDelay]="500"
+          matTooltipPosition="above"
+          class="item__chips"
+          >{{ board.owner | usernameById | async | slice: 0:1 | uppercase }}</mat-chip
+        >
+      </div>
     </mat-chip-list>
-    <mat-chip-list aria-label="Users">
+    <mat-chip-list aria-label="Users" class="full_width">
       <div class="hidden-overflow">
         <ng-container i18n>Users:</ng-container>
         <mat-chip
@@ -64,14 +63,28 @@
       </div>
     </mat-chip-list>
   </mat-card-content>
-  <button
-    mat-icon-button
-    type="button"
-    class="delete"
-    title="delete board"
-    (click)="onDelete($event)"
-    color="primary"
-  >
-    <mat-icon>delete</mat-icon>
-  </button>
+  <mat-card-actions class="card_actions">
+    <button
+      i18n-title
+      mat-icon-button
+      type="button"
+      class="edit"
+      title="edit board"
+      (click)="update($event)"
+      color="primary"
+    >
+      <mat-icon>edit</mat-icon>
+    </button>
+    <button
+      i18n-title
+      mat-icon-button
+      type="button"
+      class="delete"
+      title="delete board"
+      (click)="onDelete($event)"
+      color="primary"
+    >
+      <mat-icon>delete</mat-icon>
+    </button>
+  </mat-card-actions>
 </mat-card>
