--- a/project-management-app/src/app/boards/components/create-board-button/create-board-button.component.html
+++ b/project-management-app/src/app/boards/components/create-board-button/create-board-button.component.html
@@ -10,7 +10,11 @@
   [disabled]="!(isLoggedIn$ | async)"
   type="button"
 >
-  <mat-icon aria-hidden="false" aria-label="create_new_folder icon" fontIcon="create_new_folder"
+  <mat-icon
+    aria-hidden="false"
+    aria-label="create_new_folder icon"
+    fontIcon="create_new_folder"
+    color="accent"
     >create_new_folder</mat-icon
   ><ng-container i18n> Create Board</ng-container>
 </button>
