--- a/project-management-app/src/app/boards/components/create-board-dialog/create-board-dialog.component.html
+++ b/project-management-app/src/app/boards/components/create-board-dialog/create-board-dialog.component.html
@@ -6,7 +6,7 @@
   </div>
   <h5 class="description">{{ configDialog.description }}</h5>
   <mat-dialog-content class="mat-typography modalContent">
-    <div>
+    <div class="wrapper">
       <mat-form-field class="form-field" appearance="fill">
         <mat-label for="title" i18n>Board Title</mat-label>
         <input
