--- a/project-management-app/src/app/core/pages/not-found-page/not-found-page.component.html
+++ b/project-management-app/src/app/core/pages/not-found-page/not-found-page.component.html
@@ -22,5 +22,5 @@
       To boards page
     </button>
   </div>
-  <img src="/assets/404-page-animation.gif" alt="Page not found" [height]="'350'" />
+  <img i18n-alt  src="/assets/404-page-animation.gif" alt="Page not found" [height]="'350'" />
 </div>
