--- a/project-management-app/src/app/pm-app/pages/welcome-page/welcome-page.component.html
+++ b/project-management-app/src/app/pm-app/pages/welcome-page/welcome-page.component.html
@@ -66,11 +66,12 @@
           <h3 class="sticker__text" i18n>Created with</h3>
           <div class="sticker__imgContainer">
             <div class="logosRow">
-              <img src="../../../../assets/heart.png" alt="heart" height="30px" />
+              <img i18n-alt src="../../../../assets/heart.png" alt="heart" height="30px" />
               <ng-container i18n>and</ng-container>
             </div>
             <div class="logosRow">
               <img
+                i18n-alt
                 class="sticker__img"
                 src="../../../../assets/angular-logo.png"
                 alt="angular Logo"
@@ -78,6 +79,7 @@
               />
 
               <img
+                i18n-alt
                 src="../../../../assets/Typescript_logo.png"
                 alt="Typescript_logo Logo"
                 height="30px"
@@ -94,7 +96,7 @@
             <a
               class="sticker__course"
               href="https://github.com/rolling-scopes-school/js-fe-course-en/tree/main/UpSkillMe"
-              ><img src="../../../../assets/epam-logo.png" alt="epam logo" height="30px" />
+              ><img i18n-alt src="../../../../assets/epam-logo.png" alt="epam logo" height="30px" />
               <ng-container i18n>UpSkillMe course</ng-container></a
             >
           </div>
