--- a/project-management-app/src/app/auth/components/login-form/login-form.component.html
+++ b/project-management-app/src/app/auth/components/login-form/login-form.component.html
@@ -45,7 +45,7 @@
       </div>
     </div>
     <button
-      mat-stroked-button
+      mat-flat-button
       color="primary"
       aria-label="icon button with icon"
       [class]="'button'"
