--- a/project-management-app/src/app/boards/components/board-view/board-view.component.html
+++ b/project-management-app/src/app/boards/components/board-view/board-view.component.html
@@ -26,15 +26,30 @@
             >{{ user | usernameById | async | slice: 0:1 | uppercase }}</mat-chip
           >
         </div>
-        <div class="to-bottom" *ngIf="board.users.length > 5" (click)="showMore($event)">
+        <button
+          *ngIf="board.users.length > 5"
+          mat-icon-button
+          [matMenuTriggerFor]="menu"
+          aria-label="Example icon-button with a menu"
+        >
           <mat-icon>more_vert</mat-icon>
-        </div>
+        </button>
+        <mat-menu #menu="matMenu" class="menuIfMany">
+          <mat-chip
+            matTooltip="{{ user | usernameById | async }}"
+            [matTooltipShowDelay]="500"
+            matTooltipPosition="above"
+            class="item__chips"
+            *ngFor="let user of board.users"
+            >{{ user | usernameById | async | slice: 0:1 | uppercase }}</mat-chip
+          >
+        </mat-menu>
       </div>
     </mat-chip-list>
   </mat-card-content>
   <mat-card-actions>
     <button
-      mat-icon-button
+      mat-flat-button
       *ngIf="board$ | async as board"
       type="button"
       (click)="gotoBoards(board)"
