--- a/project-management-app/src/app/boards/components/boards-list/boards-list.component.scss
+++ b/project-management-app/src/app/boards/components/boards-list/boards-list.component.scss
@@ -1,9 +1,35 @@
+.container_boardsList {
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  align-items: center;
+  min-height: calc(100vh - 250px);
+  width: 100%;
+  justify-content: center;
+  overflow: hidden;
+}
+
 .boards-list {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  align-self: center;
+  text-align: center;
   gap: 20px;
   flex-wrap: wrap;
-  margin-bottom: 20px;
+  margin: 0 auto 20px;
+  width: 90%;
+  overflow: hidden;
+}
+
+app-board-preview {
+  width: inherit;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 .title-container {
