--- a/project-management-app/src/app/core/components/localization-switcher/localization-switcher.component.html
+++ b/project-management-app/src/app/core/components/localization-switcher/localization-switcher.component.html
@@ -1,6 +1,14 @@
-<div [class]="'switcher'">
-  <span [class]="'switcher__lang'">EN</span
-  ><mat-slide-toggle color="accent" [checked]="checked">
-    RU
-  </mat-slide-toggle>
+<div class="locale_nav">
+  <mat-form-field class="locale_nav__select">
+    <mat-select
+      [(value)]="selectedLocale"
+      name="selectedLocale"
+      class="form-control"
+      (selectionChange)="selected($event)"
+    >
+      <mat-option *ngFor="let locale of locales" [value]="locale.code">
+        {{ locale.name }}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
 </div>
