--- a/project-management-app/src/app/core/components/localization-switcher/localization-switcher.component.scss
+++ b/project-management-app/src/app/core/components/localization-switcher/localization-switcher.component.scss
@@ -1,8 +1,25 @@
-.switcher {
-  display: flex;
-  flex-direction: row;
-  gap: 10px;
-  justify-content: center;
-  align-items: center;
-  font-size: 14px;
+.locale_nav {
+  & &__select {
+    font-size: 14px;
+    padding: 0;
+    margin: 0;
+    width: 50px;
+    height: 40px;
+
+    ::ng-deep .mat-form-field-appearance-outline.mat-form-field-disabled,
+    ::ng-deep .mat-form-field-outline,
+    ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-start,
+    ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-end,
+    ::ng-deep.mat-form-field-appearance-outline .mat-form-field-outline,
+    ::ng-deep .mat-form-field-appearance-outline .mat-form-field-outline-gap {
+      opacity: 0;
+      border: none;
+      border-radius: 0;
+      padding: 0;
+    }
+
+    ::ng-deep .no-line .mat-form-field-underline {
+      display: none;
+    }
+  }
 }
