--- a/project-management-app/src/app/shared/components/tasks-search/tasks-search.component.scss
+++ b/project-management-app/src/app/shared/components/tasks-search/tasks-search.component.scss
@@ -3,14 +3,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  align-self: baseline;
   height: 100%;
-
   z-index: 10;
   position: relative;
   background-color: #3f51b5;
   color: white;
   font-size: 14px;
-  padding: 10px;
+  padding-bottom: 20px;
 
   .matFormField {
     padding: 0;
@@ -27,8 +27,13 @@
       margin: 0;
     }
   }
+  .search-container,
+  .matFormField,
+  .mat-form-field-wrapper {
+    width: 300px;
+  }
+
   .tasksInput {
-    width: 310px;
     height: 16px;
     -webkit-transition: width 0.4s ease-in-out;
     transition: width 0.4s ease-in-out;
@@ -46,10 +51,9 @@
     max-height: 300px;
     overflow-y: auto;
     overflow-x: hidden;
+    width: 270px;
 
     .option {
-      // max-width: 100%;
-      // max-height: 100%;
       color: white;
       font-size: 14px;
       text-overflow: ellipsis;
@@ -89,5 +93,40 @@
     overflow: hidden;
     white-space: normal;
     padding: 10px;
+  }
+}
+
+@media (max-width: 1100px) {
+  .search-container .search-container,
+  .search-container .matFormField,
+  .search-container .mat-form-field-wrapper {
+    width: 200px;
+  }
+
+  .search-container .optionsFound {
+    width: 180px;
+  }
+}
+
+@media (max-width: 550px) {
+  .search-container {
+    padding: 0;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    width: 90vw;
+    & .mat-form-field-wrapper {
+      display: block;
+      width: 80vw;
+    }
+
+    & .optionsFound {
+      width: 100vw;
+    }
+
+    .search-message {
+      width: 100%;
+    }
   }
 }
