--- a/project-management-app/src/app/tasks/components/column-item/column-item.component.html
+++ b/project-management-app/src/app/tasks/components/column-item/column-item.component.html
@@ -1,47 +1,49 @@
 <div *ngIf="column" id="{{ column._id }}" class="column-wrapper">
   <mat-card [class]="'column-item'">
-      <div class="card-container__inner__heading" *ngIf="!formVisible" (click)="update()">
-        {{ column.title }}
-      </div>
+    <div class="card-container__inner__heading" *ngIf="!formVisible" (click)="update()">
+      {{ column.title }}
+    </div>
 
-      <form
-        *ngIf="formVisible"
-        (ngSubmit)="onSubmit(ngForm)"
-        #ngForm="ngForm"
-        [formGroup]="updateColumnForm"
-        class="formForTitle"
-      >
-        <mat-form-field class="formForTitle__textarea">
-          <input
-            class="formForTitle__textarea"
-            matInput
-            name="title"
-            formControlName="title"
-            required
-          />
-        </mat-form-field>
-        <button (click)="cancel()" type="submit" title="cancel" mat-icon-button>
-          <mat-icon>cancel</mat-icon>
-        </button>
-        <button
-          [disabled]="!updateColumnForm.valid"
-          title="save changes"
-          type="submit"
-          mat-icon-button
-        >
-          <mat-icon>save</mat-icon>
-        </button>
-      </form>
-      <button
-        mat-icon-button
-        type="button"
-        class="delete"
-        title="delete column"
-        (click)="onDelete()"
-        color="secondary"
-      >
-        <mat-icon>delete</mat-icon>
+    <form
+      *ngIf="formVisible"
+      (ngSubmit)="onSubmit(ngForm)"
+      #ngForm="ngForm"
+      [formGroup]="updateColumnForm"
+      class="formForTitle"
+    >
+      <mat-form-field class="formForTitle__textarea">
+        <input
+          class="formForTitle__textarea"
+          matInput
+          name="title"
+          formControlName="title"
+          required
+        />
+      </mat-form-field>
+      <button (click)="cancel()" type="submit" title="cancel" mat-icon-button>
+        <mat-icon>cancel</mat-icon>
       </button>
+      <button
+        i18n-title
+        [disabled]="!updateColumnForm.valid"
+        title="save changes"
+        type="submit"
+        mat-icon-button
+      >
+        <mat-icon>save</mat-icon>
+      </button>
+    </form>
+    <button
+      i18n-title
+      mat-icon-button
+      type="button"
+      class="delete"
+      title="delete column"
+      (click)="onDelete()"
+      color="secondary"
+    >
+      <mat-icon>delete</mat-icon>
+    </button>
   </mat-card>
 
   <div>
