--- a/project-management-app/src/app/tasks/components/task-item/task-item.component.html
+++ b/project-management-app/src/app/tasks/components/task-item/task-item.component.html
@@ -1,8 +1,9 @@
 <mat-card *ngIf="task" class="task-item" (click)="onEdit()">
   <div class="task-item__header">
     <h3
-      matTooltip="Task {{task.title}}
-                  Description {{task.description}}"
+      i18n-matTooltip
+      matTooltip="Task {{ task.title }}
+                  Description {{ task.description }}"
       [matTooltipShowDelay]="500"
       matTooltipPosition="above"
       class="task-item__heading"
@@ -11,6 +12,7 @@
     </h3>
 
     <button
+      i18n-title
       mat-icon-button
       type="button"
       class="delete"
@@ -24,27 +26,45 @@
   <div class="task-item__footer">
     <mat-chip-list aria-label="Owner" class="task-item__chips-container">
       <mat-chip
+        i18n-matTooltip
         class="task-item__chips"
-        matTooltip="Task owner {{task.userId | usernameById | async}}:userName:"
+        matTooltip="Task owner {{ task.userId | usernameById | async }}"
         [matTooltipShowDelay]="500"
         matTooltipPosition="above"
         >{{ task.userId | usernameById | async | slice: 0:1 | uppercase }}</mat-chip
       >
     </mat-chip-list>
-    <mat-chip-list aria-label=$localize`Users` class="task-item__mat-chip-list">
+    <mat-chip-list aria-label="$localize`Users`" class="task-item__mat-chip-list">
       <div class="task-item__chips-container">
         <mat-chip
+          i18n-matTooltip
           class="task-item__chips"
-          matTooltip="Responsible: {{ user | usernameById | async }}:userName:"
+          matTooltip="Responsible: {{ user | usernameById | async }}"
           [matTooltipShowDelay]="500"
           matTooltipPosition="above"
           *ngFor="let user of task.users"
           >{{ user | usernameById | async | slice: 0:1 | uppercase }}</mat-chip
         >
       </div>
-      <div *ngIf="task.users.length > 3" (click)="showMore($event)">
+      <button
+        *ngIf="task.users.length > 3"
+        mat-icon-button
+        [matMenuTriggerFor]="menu"
+        aria-label="Example icon-button with a menu"
+        (click)="showMore($event)"
+      >
         <mat-icon>more_vert</mat-icon>
-      </div>
+      </button>
+      <mat-menu #menu="matMenu" class="menuIfMany">
+        <mat-chip
+          matTooltip="{{ user | usernameById | async }}"
+          [matTooltipShowDelay]="500"
+          matTooltipPosition="above"
+          class="item__chips"
+          *ngFor="let user of task.users"
+          >{{ user | usernameById | async | slice: 0:1 | uppercase }}</mat-chip
+        >
+      </mat-menu>
     </mat-chip-list>
   </div>
 </mat-card>
