--- a/project-management-app/src/styles.scss
+++ b/project-management-app/src/styles.scss
@@ -60,6 +60,7 @@ a:visited {
 }
 
 .container {
+  position: relative;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
@@ -67,6 +68,8 @@ a:visited {
   min-height: calc(100vh - 250px);
   justify-content: flex-start;
   overflow: hidden;
+  // width: 100%;
+  // max-width: min(90%, 1100px);
 }
 
 .container__users-form {
@@ -104,7 +107,7 @@ body::-webkit-scrollbar-track {
 
 body::-webkit-scrollbar-thumb {
   background: rgb(146, 153, 163);
-  border-radius: 10px;
+  border-radius: 15px;
 }
 
 body::-webkit-scrollbar-thumb:hover {
