refactor: auth module

--- a/src/app/auth/components/login/login.component.html
+++ b/src/app/auth/components/login/login.component.html
@@ -1,7 +1,7 @@
 <button
   mat-raised-button
   color="accent"
-  [class]="'login-button'"
+  class="login-button"
   routerLink="/auth/login"
   routerLinkActive="active"
   ariaCurrentWhenActive="page"
