refactor: boards module && feat: reset meta reducer on logout

--- a/src/app/boards/components/board-view/board-view.component.html
+++ b/src/app/boards/components/board-view/board-view.component.html
@@ -52,7 +52,7 @@
       mat-flat-button
       *ngIf="board$ | async as board"
       type="button"
-      (click)="gotoBoards(board)"
+      (click)="gotoBoards()"
       color="primary"
     >
       <mat-icon>arrow_back_ios</mat-icon>
