refactor: shared module

--- a/src/app/tasks/components/task-item/task-item.component.html
+++ b/src/app/tasks/components/task-item/task-item.component.html
@@ -17,7 +17,7 @@
       type="button"
       class="delete"
       title="delete task"
-      (click)="onDelete()"
+      (click)="onDelete($event)"
       color="primary"
     >
       <mat-icon>delete</mat-icon>
